[workspace]
members = [
    "ports/winit",
    "ports/gstplugin",
    "ports/libsimpleservo/capi/",
    "ports/libsimpleservo/jniapi/",
    "ports/libmlservo/",
    "tests/unit/*",
]
exclude = [".cargo"]

[profile.release]
opt-level = 3
# Uncomment to profile on Linux:
# debug = true
# lto = false

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }

# This is here to dedupe winapi since mio 0.6 is still using winapi 0.2.
mio = { git = "https://github.com/servo/mio.git", branch = "servo" }

[patch."https://github.com/servo/media"]
servo-media = { git = "https://github.com/ferjm/media.git", branch = "devicemonitor" }
servo-media-gstreamer = { git = "https://github.com/ferjm/media.git", branch = "devicemonitor" }
servo-media-audio = { git = "https://github.com/ferjm/media.git", branch = "devicemonitor" }
servo-media-player = { git = "https://github.com/ferjm/media.git", branch = "devicemonitor" }
servo-media-streams = { git = "https://github.com/ferjm/media.git", branch = "devicemonitor" }
servo-media-webrtc = { git = "https://github.com/ferjm/media.git", branch = "devicemonitor" }
